2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.54 released.

        * Fixed Bug #32350 for Term-Menus:
          Using &selected(]Selected[) does not always work

        * Improved Error reporting in certain routines


2010-09-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.53 released.

        * Added requires Module::Load::Conditional to
          Makefile.PL in attempt to clean up CPAN
          testers reports.


2010-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.52 released.

        * Using eval around GetTerminalSize so that CPAN
          Testers automated tests won't break (somehow this
          fix got overwritten from release 1.50)


2010-09-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.51 released.

        * Added can_load for files in Custom directory - if
          file doesn't exist, load Distro instead


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.50 released.

        * Using eval around GetTerminalSize so that CPAN
          Testers automated tests won't break


2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.49 released.

        * Now using Module::Load::Conditional to load
          Term::ReadKey


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.48 released.

        * Removed Build.PL from build


2010-09-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.47 released.

        * 'Finally' got the gpg signature going again


2010-08-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.46 released.

        * Implemented 'unattended' mode for use with Net:FullAuto
          and other scripts that run in batch. For 'unattended'
          mode to work, Menu blocks must be configured with
          Default selections.

