@@ -13,10 +13,10 @@ name: Term-Menus
 provides:
   Term::Menus:
     file: lib/Term/Menus.pm
-    version: 1.54
+    version: 1.55
 requires:
   Module::Load::Conditional: 0
   Term::ReadKey: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 1.54
+version: 1.55
